# qianrushi_bisai

./: .gitignore
Software/Software/: .mxproject  F407_Smart_Home_Project.ioc  rtconfig.h
Software/Software/Core/Inc/: actuators.h  bluetooth_link.h  co2.h  dht11.h  display_ui.h  esp8266.h  main.h  protocol.h  sensors.h  stm32f4xx_it.h  voice_module.h
Software/Software/Core/Src/: actuators.c  bluetooth_link.c  board.c  co2.c  dht11.c  display_ui.c  esp8266.c  gpio.c  lcd_ili9341.c  lcd_ili9341.h  main.c  protocol.c  sensors.c  spi.c  spi.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c  voice_module.c
Software/Software/LVGL/: lv_conf.h
Software/Software/LVGL/examples/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c
Software/Software/LVGL/src/font/: lv_font_cn_16.c
Software/Software/MDK-ARM/: F407_Smart_Home_Project.uvprojx
Software/Software/MDK-ARM/RTE/_F407_Smart_Home_Project/: RTE_Components.h
k230/: STM32F4_V4.0_2026-06-22.epro2  smart_agriculture_rtsp.py
pcb/: STM32F4_V3.0.epro2
qt/one/: CMakeLists.txt  Main.qml  README.md  appcontroller.cpp  appcontroller.h  controlmodel.cpp  controlmodel.h  main.cpp
qt/one/.qtcreator/: CMakeLists.txt.user.7bdc292
